Change authentication to Forms

--- a/MySolution.Web/Web.config
+++ b/MySolution.Web/Web.config
@@ -137,13 +137,14 @@
     ASP.NET to identify an incoming user.
     -->
     <identity impersonate="true" />
-    <authentication mode="None">
-      <!--<forms name="Login" loginUrl="Login.aspx" path="/" timeout="10" defaultUrl="/" />-->
+    <authentication mode="Forms">
+      <forms name="Login" loginUrl="Login.aspx" timeout="1" defaultUrl="~/" />
     </authentication>
-    <!--<authorization>
-      <deny users="?" />
-      <allow users="*" />
-    </authorization>-->
+
+    <authorization>
+      <deny users="?"/>
+      <allow users="*"/>
+    </authorization>   
     <!--
     The <customErrors> section enables configuration
     of what to do if/when an unhandled error occurs
@@ -158,6 +159,13 @@
     -->
   </system.web>
   <!-- For applications with a security system -->
+  <location path="signin-microsoft">
+    <system.web>
+      <authorization>
+        <allow users="?" />
+      </authorization>
+    </system.web>
+  </location>
   <location path="DXX.axd">
     <system.web>
       <authorization>
