inst from start

--- a/MySolution.Web/packages.config
+++ b/MySolution.Web/packages.config
@@ -48,7 +48,7 @@
   <package id="Microsoft.Identity.Web.Certificate" version="2.15.3" targetFramework="net472" />
   <package id="Microsoft.Identity.Web.Certificateless" version="2.15.3" targetFramework="net472" />
   <package id="Microsoft.Identity.Web.Diagnostics" version="2.15.3" targetFramework="net472" />
-  
+  <package id="Microsoft.Identity.Web.TokenAcquisition" version="2.15.3" targetFramework="net472" />
   <package id="Microsoft.Identity.Web.TokenCache" version="2.15.3" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Abstractions" version="7.0.3" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="7.0.3" targetFramework="net472" />
