--- a/MySolution.Web/MySolution.Web.csproj
+++ b/MySolution.Web/MySolution.Web.csproj
@@ -275,6 +275,9 @@
     <Reference Include="Microsoft.Identity.Web.Diagnostics, Version=2.15.3.0, Culture=neutral, PublicKeyToken=0a613f4dd989e8ae, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Identity.Web.Diagnostics.2.15.3\lib\net472\Microsoft.Identity.Web.Diagnostics.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Identity.Web.TokenAcquisition, Version=2.15.3.0, Culture=neutral, PublicKeyToken=0a613f4dd989e8ae, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Identity.Web.TokenAcquisition.2.15.3\lib\net472\Microsoft.Identity.Web.TokenAcquisition.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Identity.Web.TokenCache, Version=2.15.3.0, Culture=neutral, PublicKeyToken=0a613f4dd989e8ae, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Identity.Web.TokenCache.2.15.3\lib\net472\Microsoft.Identity.Web.TokenCache.dll</HintPath>
     </Reference>
